--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ h3 {
   @apply text-2xl font-medium mb-2;
 }
 
+.link {
+  @apply underline! text-black!;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
