Fix type errors

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,8 @@ h4 {
   @apply leading-7 mb-8;
 }
 
-.news-page a, .metadata-notes a {
+.news-page a,
+.metadata-notes a {
   @apply font-semibold underline;
 }
 
